apps/base/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: apps

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: apps

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: traefiklabs
    task: whoami
