apps/base/whoami/whoami.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: app-whoami

spec:
  replicas: 0
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: traefiklabs
      task: whoami
  strategy:
    type: RollingUpdate
  rollingUpdate:
    maxUnavailable: 0
    maxSurge: 1
  template:
    metadata:
      labels:
        app: traefiklabs
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami@sha256:4f90b33ddca9c4d4f06527070d6e503b16d71016edea036842be2a84e60c91cb
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 50m
              memory: 32Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
            failureThreshold: 20
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 5
            failureThreshold: 20
          ports:
            - containerPort: 80
              name: http
      dnsConfig:
        options:
          - name: ndots
            value: "1"

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: app-whoami

spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: traefiklabs
    task: whoami
