apps/base/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-forwardauth
  namespace: app-whoami
spec:
  forwardAuth:
    address: http://authelia.app-authelia.svc:9091/api/authz/forward-auth?authelia_url=https://auth.cluster.arpa
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: app-whoami

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`whoami.cluster.arpa`)
      kind: Rule
      middlewares:
        - name: authelia-forwardauth
          namespace: app-whoami
      services:
        - name: whoami
          port: http
  tls:
    secretName: whoami-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami-public
  namespace: app-whoami
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.decentm.com`)
      kind: Rule
      services:
        - name: whoami
          port: 8080
