apps/base/whoami/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: app-whoami

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: Host(`whoami.cluster.arpa`)
      kind: Rule
      services:
        - name: whoami
          port: 80
  tls:
    secretName: traefik-tls
